vaadin-flow/core/src/main/resources/META-INF/resources/themes/linkki/vaadin-grid.css
/* Solid background for card sections */
vaadin-grid {
    --vaadin-grid-cell-background: var(--linkki-grid-background);
}

[theme~="card-sections"] .linkki-main-area linkki-section, .linkki-main-area [theme~="card-sections"] linkki-section, vaadin-dialog[theme~="card-sections"] linkki-section, vaadin-dialog [theme~="card-sections"] linkki-section, linkki-section[theme~="card"] {
    --linkki-section-background: color-mix(in srgb, var(--lumo-base-color) 95%, rgb(from var(--lumo-contrast-5pct) r g b / 100%) 5%);
}
/* Header styling */
vaadin-grid::part(header-cell) {
    min-height: var(--lumo-size-m);
}

/* Foot styling */
vaadin-grid::part(footer-cell) {
    font-size: var(--lumo-font-size-m);
    text-shadow: var(--linkki-footer-text-shadow);
    text-align: var(--linkki-footer-alignment, left);
}

/*
 * Empty state
 */
vaadin-grid[has-placeholder]:not([has-items]) {
    visibility: hidden;
    min-height: var(--_grid-min-height);

    /* override fixed inline height */
    height: unset !important;
}

vaadin-grid[has-placeholder]:not([has-items])::part(row) {
    display: none;
}

vaadin-grid[has-placeholder]:not([has-items])::before {
    visibility: visible;
    content: var(--placeholder, "");
    font-style: var(--linkki-empty-state-font-style);
    color: var(--linkki-empty-state-text-color);
}

